k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  type: ClusterIP   
  selector:
    app: django-app
  ports:
    - port: 80        
      targetPort: 8000
